Fix align of nick name and day to attraction card

--- a/app/assets/stylesheets/attraction.scss
+++ b/app/assets/stylesheets/attraction.scss
@@ -54,12 +54,4 @@
   border-top: 1px solid #ececec;
   background: #f8f8f8;
   font-size: 18px;
-
-  .day {
-    float: right;
-  }
-
-  .nick-name {
-    float: left;
-  }
 }
